--- a/streamlit_FEF/strmlt.ipynb
+++ b/streamlit_FEF/strmlt.ipynb
@@ -730,30 +730,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Deployolás \"máshova\" (azaz nem a saját gépen, dev üzemmódban akarjuk csak futtatni)\n"
+    "### Deployolás \"máshova\" (azaz nem a saját gépen, dev üzemmódban akarjuk csak futtatni)\n",
+"\n",
+"l. a dokumentációt.\n"
    ]
   },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### NiceGUI"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Solara"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Trema"
-   ]
-  }
+ 
  ],
  "metadata": {
   "kernelspec": {
